--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
 <title>My Portfolio</title>
+</head>
+<body>
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Resume.html">Resume</a></li>
-        <li><a href="Adobe Animate Character Animation.html">Character Animation</a></li>
-        <li><a href="Adobe Animate Advertisement.html">Advertisement</a></li>
-        <li><a href="Adobe Animate Interactive Banner.html">Interactive Banner</a></li>
-        <li><a href="Adobe Photoshop Photo Restoration.html">Photo Restoration</a></li>
-        <li><a href="Adobe Photoshop Magazine Cover.html">Digital Magazine Cover</a></li>
-        <li><a href="Adobe Photoshop Branding.html">Branding Package</a></li>
+        <li><a href="AdobeAnimateCharacterAnimation.html">Character Animation</a></li>
+        <li><a href="AdobeAnimateAdvertisement.html">Advertisement</a></li>
+        <li><a href="AdobeAnimateInteractiveBanner.html">Interactive Banner</a></li>
+        <li><a href="AdobePhotoshopPhotoRestoration.html">Photo Restoration</a></li>
+        <li><a href="AdobePhotoshopMagazineCover.html">Digital Magazine Cover</a></li>
+        <li><a href="AdobePhotoshopBranding.html">Branding Package</a></li>
     </ul>
 </nav>
-</head>
 <h1>Introduction</h1>
-<body>
  <p>Welcome to the portfolio for Christina Pacifico.</p>
 </body>
 </html>
