--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <li><a href="AdobeAnimateInteractiveBanner.html">Interactive Banner</a></li>
         <li><a href="AdobePhotoshopPhotoRestoration.html">Photo Restoration</a></li>
         <li><a href="AdobePhotoshopMagazineCover.html">Digital Magazine Cover</a></li>
-        <li><a href="AdobePhotoshopBranding.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Introduction</h1>
- <p>Welcome to the portfolio for Christina Pacifico.</p>
+ <p>Welcome to the portfolio for Christina Pacifico. The purpose of this site is to showcase the work I have done in my Web Design Professional course with Webucator.</p>
 </body>
 </html>
