--- a/Magazine Cover.html
+++ b/Magazine Cover.html
@@ -9,12 +9,12 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Resume.html">Resume</a></li>
-        <li><a href="AdobeAnimateCharacterAnimation.html">Character Animation</a></li>
-        <li><a href="AdobeAnimateAdvertisement.html">Advertisement</a></li>
-        <li><a href="AdobePhotoshopPhotoRestoration.html">Photo Restoration</a></li>
-        <li><a href="AdobePhotoshopMagazineCover.html">Digital Magazine Cover</a></li>
-        <li><a href="AdobePhotoshopBranding.html">Branding Package</a></li>
+        <li><a href="Resume/index.html">Resume</a></li>
+        <li><a href="AdobeAnimateCharacterAnimation/index.html">Character Animation</a></li>
+        <li><a href="AdobeAnimateAdvertisement/index.html">Advertisement</a></li>
+        <li><a href="AdobePhotoshopPhotoRestoration/index.html">Photo Restoration</a></li>
+        <li><a href="AdobePhotoshopMagazineCover/index.html">Digital Magazine Cover</a></li>
+        <li><a href="AdobePhotoshopBranding/index.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Digital Magazine Cover</h1>
