--- a/Character Animation.html
+++ b/Character Animation.html
@@ -8,13 +8,13 @@
 <body>
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Resume/index.html">Resume</a></li>
-        <li><a href="AdobeAnimateCharacterAnimation/index.html">Character Animation</a></li>
-        <li><a href="AdobeAnimateAdvertisement/index.html">Advertisement</a></li>
-        <li><a href="AdobePhotoshopPhotoRestoration/index.html">Photo Restoration</a></li>
-        <li><a href="AdobePhotoshopMagazineCover/index.html">Digital Magazine Cover</a></li>
-        <li><a href="AdobePhotoshopBranding/index.html">Branding Package</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Resume/index.html">Resume</a></li>
+        <li><a href="index.html">Character Animation</a></li>
+        <li><a href="../AdobeAnimateAdvertisement/index.html">Advertisement</a></li>
+        <li><a href="../AdobePhotoshopPhotoRestoration/index.html">Photo Restoration</a></li>
+        <li><a href="../AdobePhotoshopMagazineCover/index.html">Digital Magazine Cover</a></li>
+        <li><a href="../AdobePhotoshopBranding/index.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Character Animation</h1>
