--- a/characteranimation.html
+++ b/characteranimation.html
@@ -8,13 +8,13 @@
 <body>
 <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../resume/index.html">Resume</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
         <li><a href="index.html">Character Animation</a></li>
-        <li><a href="../adobeanimateadvertisement/index.html">Advertisement</a></li>
-        <li><a href="../adobephotoshopphotorestoration/index.html">Photo Restoration</a></li>
-        <li><a href="../adobephotoshopmagazinecover/index.html">Digital Magazine Cover</a></li>
-        <li><a href="../adobephotoshopbranding/index.html">Branding Package</a></li>
+        <li><a href="advertisement/index.html">Advertisement</a></li>
+        <li><a href="photorestoration/index.html">Photo Restoration</a></li>
+        <li><a href="magazinecover/index.html">Digital Magazine Cover</a></li>
+        <li><a href="branding/index.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Character Animation</h1>
@@ -22,6 +22,6 @@
 <p>The purpose of this project was to showcase my use of the basics involved in using Adobe 
 Animate and how those skills can be utilized to create a basic animation. I used many tools from Adobe Animate to complete this project. The main tools I used were the 
 Oval Primitive tool and the Classic Brush tool.</p>
-<img src="C:/Users/christinap/Desktop/Ed2go/Animate/Project1.gif" alt="Character Animation">
+<img src=![Project1](https://github.com/user-attachments/assets/c1246a92-222c-463c-8539-5bfa186b45d8) alt="Character Animation">
 </body>
 </html>
