--- a/Advertisement.html
+++ b/Advertisement.html
@@ -8,18 +8,18 @@
 <body>
 <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../resume/index.html">Resume</a></li>
-        <li><a href="../characteranimation/index.html">Character Animation</a></li>
-        <li><a href="index.html">Advertisement</a></li>
-        <li><a href="../adobephotoshopphotorestoration/index.html">Photo Restoration</a></li>
-        <li><a href="../adobephotoshopmagazinecover/index.html">Digital Magazine Cover</a></li>
-        <li><a href="../adobephotoshopbranding/index.html">Branding Package</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="characteranimation.html">Character Animation</a></li>
+        <li><a href="advertisement.html">Advertisement</a></li>
+        <li><a href="photorestoration.html">Photo Restoration</a></li>
+        <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
+        <li><a href="branding.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Company Advertisement</h1>
 <h2>Project Summary</h2>
 <p>The purpose of this project was to showcase my use of the more advanced tools in Adobe Animate. It was also to create an advertisement for plumbing service. I used several outside image assets in this project. All assets were obtained from Adobe Stock.</p>
-    <img src="C:/Users/christinap/Desktop/Ed2go/Animate/animate-project-characteranimation/Project2/Exports/Project-2.gif" alt="Company Advertisement">
+    <img src="https://github.com/user-attachments/assets/c5283e9d-8823-4d11-8e9c-1b225abef0a5"  alt="Advertisement">
 </body>
 </html>
