--- a/Branding.html
+++ b/Branding.html
@@ -8,27 +8,27 @@
 <body>
 <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../resume/index.html">Resume</a></li>
-        <li><a href="../charateranimation/index.html">Character Animation</a></li>
-        <li><a href="../adobeanimateadvertisement/index.html">Advertisement</a></li>
-        <li><a href="../adobephotoshopphotorestoration/index.html">Photo Restoration</a></li>
-        <li><a href="../adobephotoshopmagazinecover/index.html">Digital Magazine Cover</a></li>
-        <li><a href="index.html">Branding Package</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="charateranimation.html">Character Animation</a></li>
+        <li><a href="advertisement.html">Advertisement</a></li>
+        <li><a href="photorestoration.html">Photo Restoration</a></li>
+        <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
+        <li><a href="branding.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Branding Package</h1>
 <h2>Project Summary</h2>
 <p>The purpose of this project was to showcase my use of photoshop by creating a branding package for a fictional start-up.</p>
     <h2>Logo</h2>
-     <img src="C:/Users/chris/Desktop/Photoshop/Projects/photoshop-project-branding/exports/logo.png" alt="Logo">
+     <img src="https://github.com/user-attachments/assets/da212339-538d-4f64-9977-5f317ebdc568" alt="Logo">
     <h2>Business Card Front</h2>
-     <img src="C:/Users/chris/Desktop/Photoshop/Projects/photoshop-project-branding/exports/businesscardfront.png" alt="Business Card Front">
+     <img src="https://github.com/user-attachments/assets/242b67d1-1ffe-422b-9686-32c432144fb5" alt="business card front">
     <h2>Business Card Back</h2>
-     <img src="C:/Users/chris/Desktop/Photoshop/Projects/photoshop-project-branding/exports/businesscardback.png" alt="Business Card Back">
+     <img src="https://github.com/user-attachments/assets/45beb1fe-b0bd-451f-a52a-ed39f64842a3" alt="business card back">
     <h2>Social Media Banner 1</h2>
-     <img src="C:/Users/chris/Desktop/Photoshop/Projects/photoshop-project-branding/exports/socialmediabanner1.png" alt="Social Media Banner 1">
+     <img src="https://github.com/user-attachments/assets/42ddf55a-8fc0-435e-a74f-389838fbd8cb" alt="social media banner 1">
     <h2>Social Media Banner 2</h2>
-      <img src="C:/Users/chris/Desktop/Photoshop/Projects/photoshop-project-branding/exports/socialmediabanner2.png" alt="Social Media Banner 2">
+      <img src="https://github.com/user-attachments/assets/372470e4-cec8-473b-b710-1f7d1e47d27c" alt="social media banner 2">
 </body>
 </html>
