--- a/magazinecover.html
+++ b/magazinecover.html
@@ -8,18 +8,18 @@
 <body>
 <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../resume/index.html">Resume</a></li>
-        <li><a href="../characteranimation/index.html">Character Animation</a></li>
-        <li><a href="../adobeanimateadvertisement/index.html">Advertisement</a></li>
-        <li><a href="../adobephotoshopphotorestoration/index.html">Photo Restoration</a></li>
-        <li><a href="index.html">Digital Magazine Cover</a></li>
-        <li><a href="../adobephotoshopbranding/index.html">Branding Package</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="characteranimation.html">Character Animation</a></li>
+        <li><a href="nimateadvertisement.html">Advertisement</a></li>
+        <li><a href="photorestoration.html">Photo Restoration</a></li>
+        <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
+        <li><a href="branding.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Digital Magazine Cover</h1>
 <h2>Project Summary</h2>
 <p>The purpose of this project was to showcase my use of photoshop by creating a digital magazine cover using a fake celebrity.</p>
-     <img src="C:/Users/chris/Desktop/Photoshop/photoshop-project-magazinecover/DigitalMagazineCover.png" alt="Magazine Cover">
+     <img src="https://spaces.hightail.com/space/hLLOUiuoWK/files/fi-89e449ca-596a-4952-a65f-15fe13334e17/fv-d9e21eee-be9d-44f5-b4cd-2a2eeea456c3/Digital%20Magazine%20Cover.png" alt="Magazine Cover">
 </body>
 </html>
