--- a/Resume.html
+++ b/Resume.html
@@ -8,13 +8,13 @@
 <body>
 <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="index.html">Resume</a></li>
-        <li><a href="../characteranimation/index.html">Character Animation</a></li>
-        <li><a href="../adobeanimateadvertisement/index.html">Advertisement</a></li>
-        <li><a href="../adobephotoshopphotorestoration/index.html">Photo Restoration</a></li>
-        <li><a href="../adobephotoshopmagazinecover/index.html">Digital Magazine Cover</a></li>
-        <li><a href="../adobephotoshopbranding/index.html">Branding Package</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="characteranimation.html">Character Animation</a></li>
+        <li><a href="advertisement.html">Advertisement</a></li>
+        <li><a href="photorestoration.html">Photo Restoration</a></li>
+        <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
+        <li><a href="branding.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Resume</h1>
