--- a/photorestoration.html
+++ b/photorestoration.html
@@ -8,18 +8,18 @@
 <body>
 <nav>
     <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../resume/index.html">Resume</a></li>
-        <li><a href="../characteranimation/index.html">Character Animation</a></li>
-        <li><a href="../adobeanimateadvertisement/index.html">Advertisement</a></li>
-        <li><a href="index.html">Photo Restoration</a></li>
-        <li><a href="../adobephotoshopmagazinecover/index.html">Digital Magazine Cover</a></li>
-        <li><a href="../adobephotoshopbranding/index.html">Branding Package</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="characteranimation.html">Character Animation</a></li>
+        <li><a href="advertisement.html">Advertisement</a></li>
+        <li><a href="photorestoration.html">Photo Restoration</a></li>
+        <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
+        <li><a href="branding.html">Branding Package</a></li>
     </ul>
 </nav>
 <h1>Restored Photo</h1>
 <h2>Project Summary</h2>
 <p>The purpose of this project was to showcase my use of Photoshop by retouching an old photo. I chose this photo because I thought it had some interesting damage to it that would be fun to heal.</p>
-     <img src="C:/Users/chris/Desktop/Photoshop/Projects/photoshop-project-photorestoration/AdaStoddard1914.png" alt="Photo Restoration">
+     <img src="https://github.com/user-attachments/assets/310a63fa-3375-4399-a354-a27a798b27f0" alt="Ada Stoddard 1914">
 </body>
 </html>
