--- a/Branding.html
+++ b/Branding.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="charateranimation.html">Character Animation</a></li>
+        <li><a href="characteranimation.html">Character Animation</a></li>
         <li><a href="advertisement.html">Advertisement</a></li>
         <li><a href="photorestoration.html">Photo Restoration</a></li>
         <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
