--- a/magazinecover.html
+++ b/magazinecover.html
@@ -11,7 +11,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="characteranimation.html">Character Animation</a></li>
-        <li><a href="nimateadvertisement.html">Advertisement</a></li>
+        <li><a href="advertisement.html">Advertisement</a></li>
         <li><a href="photorestoration.html">Photo Restoration</a></li>
         <li><a href="magazinecover.html">Digital Magazine Cover</a></li>
         <li><a href="branding.html">Branding Package</a></li>
