--- a/Resume.html
+++ b/Resume.html
@@ -18,7 +18,30 @@
     </ul>
 </nav>
 <h1>Resume</h1>
-    <img src="C:/Users/christinap/Desktop/Ed2go/HTML/PacificoResumePage1.png" alt="Resume Page 1">
-    <img src="C:/Users/christinap/Desktop/Ed2go/HTML/PacificoResumePage2.png" alt="Resume Page 2">
+<h2>Christina Pacifico</h2>
+<h3 strong>Qualifications</h3>
+<p>
+    <ol>
+        <li>Bachelor&#39s Degree with 7 years experience in pharmaceutical marketing</li>
+        <li>Experience in managing new product launches</li>
+        <li>Coordinate and attend national trade shows</li>
+        <li>Proficient in Microsoft Word, Excel, PowerPoint, Outlook, and Acumatica</li>
+    </ol>
+</p>
+<h3 strong>Experience</h3>
+<p>
+    <ol>
+        <li>SENIOR MARKETING ASSOCIATE, PHARMACEUTICAL DIVISION</li>
+        <li>CUSTOMER SERVICE REPRESENTATIVE</li>
+        <li>MARKETING COORDINATORDENTAL DIVISION</li>
+    </ol>
+</p>
+<h3 strong>Formal Education</h3>
+<p>
+    <ol>
+        <li>Saint Joseph University Masters of Pharmaceutical Marketing Program</li>
+        <li>Rowan University, Glassboro, NJ</li>
+    </ol>
+</p>
 </body>
 </html>
