--- a/magazinecover.html
+++ b/magazinecover.html
@@ -20,6 +20,6 @@
 <h1>Digital Magazine Cover</h1>
 <h2>Project Summary</h2>
 <p>The purpose of this project was to showcase my use of photoshop by creating a digital magazine cover using a fake celebrity.</p>
-     <img src="https://spaces.hightail.com/space/hLLOUiuoWK/files/fi-89e449ca-596a-4952-a65f-15fe13334e17/fv-d9e21eee-be9d-44f5-b4cd-2a2eeea456c3/Digital%20Magazine%20Cover.png" alt="Magazine Cover">
+     <img src="https://spaces.hightail.com/space/hLLOUiuoWK/files/fi-89e449ca-596a-4952-a65f-15fe13334e17/fv-d9e21eee-be9d-44f5-b4cd-2a2eeea456c3/magazinecover.png" alt="Magazine Cover">0Cover.pn
 </body>
 </html>
